# data-git-track-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/datagit/cli/: activate.py  add.py  checkout.py  commit.py  init.py  log.py  main.py  status.py  view.py
src/datagit/storage/: core.py  file.py  metadata.py  repo.py  repository.py
